--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     api project(':library-wechat')
     api project(':library-system')
     api project(':library-project')
+    api project(':library-setting')
 }
